<resources>
    <string name="app_name">ProjectManager</string>

    <!-- General Strings -->
    <string name="button_cancel">Cancel</string>

    <!-- Strings related to login -->
    <string name="login_title">Login</string>
    <string name="prompt_name">Enter Name</string>
    <string name="prompt_password">Password</string>
    <string name="login_button_login">Log in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to create user -->
    <string name="create_user_textview_title">Create User</string>
    <string name="create_user_button_create">Create</string>

    <!-- Project Manager Strings -->
    <string name="project_name">New Project</string>
    <string name="table1_header">Stories</string>
    <string name="table2_header">Personnel</string>
    <string name="btn_add_project">Add Project</string>
    <string name="btn_update_project">Update</string>

    <!-- API URL -->
    <string name="getAllProjects">79.77.23.117:2099/api/Projects/getAllProjects/</string>
    <string name="title_activity_create_user">CreateUser</string>

</resources>
