<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_project_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simeons.projectmanager.ProjectManagerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/project_name"
            android:ems="10"
            android:id="@+id/projectName"
            android:textSize="24sp"
            android:layout_toLeftOf="@+id/buttonAddProjectPM"
            android:layout_toStartOf="@+id/buttonAddProjectPM" />

            <Button
                android:text="@string/btn_add_project"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAddProjectPM"
                android:onClick="addProject"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp">

            <TextView
                android:text="@string/table1_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/storiesHeader"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"/>

            <Button
                android:text="+"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAddStoryPM"
                android:onClick="addNewStory"
                android:layout_width="wrap_content"
                android:layout_alignBaseline="@+id/storiesHeader"
                android:layout_alignBottom="@+id/storiesHeader"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ListView
                android:id="@+id/storiesList"
                android:layout_height="177dp"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                android:layout_below="@+id/buttonAdd3"></ListView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="258dp">

            <TextView
                android:text="Personnel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/personnelHeader"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"/>

            <ListView
                android:id="@+id/personnelList"
                android:layout_height="177dp"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/buttonAddPersonnelPM"></ListView>

            <Button
                android:text="+"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAddPersonnelPM"
                android:onClick="addNewPersonnel"
                android:layout_width="wrap_content"
                android:layout_alignBaseline="@+id/personnelHeader"
                android:layout_alignBottom="@+id/personnelHeader"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/personnelList"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="165dp"
                android:id="@+id/ProjectManagerProgressBar"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
